# openai_experiments

./: pyproject.toml
openai_experiments/: config.py  main.py  openai_client.py
